test/inputs/fail_check_leq_expand_T4.fw
(** This example should fail, but after expanding the definition *)

#option "fail"
type foo = int
let f (x : foo) : unit = x

